Before ngx-share

--- a/src/app/components/recipe/recipe-view/recipe-view.component.html
+++ b/src/app/components/recipe/recipe-view/recipe-view.component.html
@@ -71,8 +71,12 @@
 
       <div class="spacer"></div>
 
+      <share-buttons></share-buttons>
+
+      <div class="spacer"></div>
+
       <!-- 
-        TOP-TOOLBAR
+        BOTTOM-TOOLBAR
        -->
       <div class="bottom toolbar flexbox tiny nowrap">
         <p
