Revert "Before ngx-share"
This reverts commit d0228a80b26b5ba594a0e831fc2cfeaf8d349136.

--- a/src/app/components/recipe/recipe-view/recipe-view.component.html
+++ b/src/app/components/recipe/recipe-view/recipe-view.component.html
@@ -71,12 +71,8 @@
 
       <div class="spacer"></div>
 
-      <share-buttons></share-buttons>
-
-      <div class="spacer"></div>
-
       <!-- 
-        BOTTOM-TOOLBAR
+        TOP-TOOLBAR
        -->
       <div class="bottom toolbar flexbox tiny nowrap">
         <p
