--- a/src/app/components/recipe/recipe-view/recipe-view.component.html
+++ b/src/app/components/recipe/recipe-view/recipe-view.component.html
@@ -31,6 +31,10 @@
               <i class="fas" aria-hidden="true">&#xf044;</i>
             </a>
 
+            <!-- <a class="nostyle" (click)="">
+              <i class="fas" aria-hidden="true">&#xf14d;</i>
+            </a> -->
+
             <a class="nostyle" (click)="star()">
               <i class="far" aria-hidden="true" *ngIf="!starred">&#xf005;</i>
               <i class="fas" aria-hidden="true" *ngIf="starred">&#xf005;</i>
