--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,4 +2,5 @@
 @import "./SCSS/font.scss";
 @import "./SCSS/article.scss";
 @import "./SCSS/form.scss";
+@import "./SCSS/sharebuttons.scss";
 @import "./SCSS/scrollbar.scss";
