--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,4 @@
 @import "./SCSS/form.scss";
 @import "./SCSS/sharebuttons.scss";
 @import "./SCSS/scrollbar.scss";
+@import "./libraries/scss/libraries.scss";
