--- a/src/app/components/auth/auth-profile/auth-profile.component.html
+++ b/src/app/components/auth/auth-profile/auth-profile.component.html
@@ -1,3 +1,41 @@
+<div class="profile">
+  <lib-popover [position]="'normal'" [align]="'right'" #pop_profile>
+    <div class="pop_btn">
+      <div
+        *ngIf="auth.loggedIn; else notLoggedIn"
+        (click)="pop_profile.toggle()"
+      >
+        <img
+          *ngIf="auth.userPublicData.photoURL; else noProfileImg"
+          [src]="auth.userPublicData.photoURL"
+          alt="profile"
+        />
+
+        <ng-template #noProfileImg>
+          <i class="fas" aria-hidden="true">&#xf2bd;</i>
+        </ng-template>
+      </div>
+      <ng-template #notLoggedIn>
+        <button
+          class="tiny"
+          (click)="router.nav_login()"
+          [innerHtml]="local.data.auth.buttons.login.login"
+        ></button>
+      </ng-template>
+    </div>
+
+    <div class="pop_cnt">
+      <img [src]="auth.userPublicData.photoURL" alt="profile" />
+      <h3>{{ auth.displayName_or_email }}</h3>
+      <button
+        (click)="auth.signOut(); pop_profile.set(false)"
+        [innerHtml]="local.data.auth.buttons.logout.logout"
+      ></button>
+    </div>
+  </lib-popover>
+</div>
+
+<!-- 
 <div class="profile" (clickOutside)="popover = false">
   <div *ngIf="auth.loggedIn; else notLoggedIn" (click)="popover = !popover">
     <img
@@ -26,4 +64,5 @@
       [innerHtml]="local.data.auth.buttons.logout.logout"
     ></button>
   </div>
-</div>
+</div> 
+-->
