--- a/src/app/components/recipe/recipe-view/recipe-view.component.html
+++ b/src/app/components/recipe/recipe-view/recipe-view.component.html
@@ -31,9 +31,12 @@
               <i class="fas" aria-hidden="true">&#xf044;</i>
             </a>
 
-            <!-- <a class="nostyle" (click)="">
-              <i class="fas" aria-hidden="true">&#xf14d;</i>
-            </a> -->
+            <lib-popover [position]="'center'" #pop_share>
+              <a class="nostyle pop_btn" (click)="pop_share.toggle()">
+                <i class="fas" aria-hidden="true">&#xf14d;</i>
+              </a>
+              <p class="pop_cnt">POPOVER</p>
+            </lib-popover>
 
             <a class="nostyle" (click)="star()">
               <i class="far" aria-hidden="true" *ngIf="!starred">&#xf005;</i>
