Fixed absolute flexbox bug

--- a/src/app/components/recipe/recipe-view/recipe-view.component.html
+++ b/src/app/components/recipe/recipe-view/recipe-view.component.html
@@ -35,7 +35,10 @@
               <a class="nostyle pop_btn" (click)="pop_share.toggle()">
                 <i class="fas" aria-hidden="true">&#xf14d;</i>
               </a>
-              <p class="pop_cnt">POPOVER</p>
+
+              <div class="pop_cnt">
+                <share-buttons></share-buttons>
+              </div>
             </lib-popover>
 
             <a class="nostyle" (click)="star()">
