--- a/src/libraries/components/popover/popover.component.html
+++ b/src/libraries/components/popover/popover.component.html
@@ -1,7 +1,9 @@
 <ng-content select=".pop_btn"></ng-content>
 <div [class]="'pop_container' + ' pop_pos_' + position">
   <div
-    [class]="'box blur popover' + ' pop_al_' + align"
+    [class]="
+      'box blur popover' + (position == 'normal' ? ' pop_al_' + align : '')
+    "
     *ngIf="isOpen"
     (clickOutside)="hide_if_open()"
   >
