--- a/src/app/components/share-buttons/share-buttons.component.html
+++ b/src/app/components/share-buttons/share-buttons.component.html
@@ -2,19 +2,19 @@
   <a class="nostyle sharebutton">
     <i class="fas" aria-hidden="true">&#xf14d;</i>
   </a>
-  <a class="nostyle sharebutton" [href]="get_url('pinterest')">
+  <a class="nostyle sharebutton" [href]="get_url('pinterest')" target="_blank">
     <i class="fab" aria-hidden="true">&#xf231;</i>
   </a>
-  <a class="nostyle sharebutton" [href]="get_url('twitter')">
+  <a class="nostyle sharebutton" [href]="get_url('twitter')" target="_blank">
     <i class="fab" aria-hidden="true">&#xf099;</i>
   </a>
-  <a class="nostyle sharebutton" [href]="get_url('facebook')">
+  <a class="nostyle sharebutton" [href]="get_url('facebook')" target="_blank">
     <i class="fab" aria-hidden="true">&#xf39e;</i>
   </a>
-  <a class="nostyle sharebutton" [href]="get_url('tumblr')">
+  <a class="nostyle sharebutton" [href]="get_url('tumblr')" target="_blank">
     <i class="fab" aria-hidden="true">&#xf173;</i>
   </a>
-  <a class="nostyle sharebutton" [href]="get_url('linkedin')">
+  <a class="nostyle sharebutton" [href]="get_url('linkedin')" target="_blank">
     <i class="fab" aria-hidden="true">&#xf0e1;</i>
   </a>
 </div>
