--- a/src/app/components/recipe/recipe-view/recipe-view.component.html
+++ b/src/app/components/recipe/recipe-view/recipe-view.component.html
@@ -37,7 +37,7 @@
               </a>
 
               <div class="pop_cnt">
-                <share-buttons></share-buttons>
+                <share-buttons [recipe]="recipe"></share-buttons>
               </div>
             </lib-popover>
 
