--- a/src/app/components/menubar/menubar.component.html
+++ b/src/app/components/menubar/menubar.component.html
@@ -22,7 +22,11 @@
           <i class="fas" aria-hidden="true">&#xf019;</i>
         </a>
 
-        <a class="nostyle" [routerLink]="router.get_url('recipe_create')">
+        <a
+          class="nostyle"
+          [routerLink]="router.get_url('recipe_create')"
+          title="Create a new recipe"
+        >
           <i class="far" aria-hidden="true">&#xf0fe;</i>
         </a>
 
