--- a/src/app/components/recipe/recipe-ingredients-list/recipe-ingredients-list.component.html
+++ b/src/app/components/recipe/recipe-ingredients-list/recipe-ingredients-list.component.html
@@ -1,4 +1,4 @@
-<div class="form-group box-indent small">
+<div class="form-group">
   <!-- 
     WRITE
    -->
@@ -40,6 +40,7 @@
         </button>
       </div>
     </div>
+
     <div>
       <button type="button" id="ingredient-add" (click)="add_ingredient()">
         Add another
