--- a/src/libraries/scss/box.scss
+++ b/src/libraries/scss/box.scss
@@ -1,21 +1,9 @@
 /* BOX */
 .box {
-  padding: var(--unit-normal);
+  @include units;
 
-  border-radius: var(--unit-normal);
-
-  &.tiny {
-    padding: var(--unit-tiny);
-    border-radius: var(--unit-tiny);
-  }
-  &.small {
-    padding: var(--unit-small);
-    border-radius: var(--unit-small);
-  }
-  &.large {
-    padding: var(--unit-large);
-    border-radius: var(--unit-large);
-  }
+  padding: var(--unit);
+  border-radius: var(--unit);
 
   &.clickable {
     transition: transform 0.4s;
@@ -32,27 +20,24 @@
 
 .box,
 .container {
-  & :first-child {
+  :first-child {
     margin-top: 0;
   }
-  & :last-child {
+  :last-child {
     margin-bottom: 0;
   }
 }
-.box-indent {
-  padding-left: var(--unit-normal);
-  padding-right: var(--unit-normal);
+/* CONTAINER */
+// .container {
+//   @include units;
 
-  &.tiny {
-    padding-left: var(--unit-tiny);
-    padding-right: var(--unit-tiny);
-  }
-  &.small {
-    padding-left: var(--unit-small);
-    padding-right: var(--unit-small);
-  }
-  &.large {
-    padding-left: var(--unit-large);
-    padding-right: var(--unit-large);
-  }
+//   > *:not(:last-child) {
+//     margin-bottom: var(--unit);
+//   }
+// }
+.box-indent {
+  @include units;
+
+  padding-left: var(--unit);
+  padding-right: var(--unit);
 }
