--- a/src/app/components/recipe/recipe-ingredients-list/recipe-ingredients-list.component.html
+++ b/src/app/components/recipe/recipe-ingredients-list/recipe-ingredients-list.component.html
@@ -1,4 +1,4 @@
-<div class="form-group">
+<section class="form-group">
   <!-- 
     WRITE
    -->
@@ -58,4 +58,4 @@
       </div>
     </div>
   </div>
-</div>
+</section>
