--- a/src/libraries/scss/box.scss
+++ b/src/libraries/scss/box.scss
@@ -41,3 +41,9 @@
   padding-left: var(--unit);
   padding-right: var(--unit);
 }
+
+section {
+  @include units;
+
+  margin-bottom: var(--unit);
+}
