--- a/src/SCSS/main.scss
+++ b/src/SCSS/main.scss
@@ -1,3 +1,7 @@
+:root {
+  --tran-background-color: background-color 1s;
+}
+
 /* GENERAL */
 html,
 body {
@@ -10,6 +14,7 @@ html {
 }
 body {
   background-color: var(--color-background);
+  transition: background-color 1s;
 }
 .content {
   margin: var(--unit-auto);
