--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,4 +1,4 @@
-<div class="not-found">
+<div class="box nostyle not-found">
   <h1>404</h1>
   <p [innerHtml]="local.data.not_found.desc.replace('%what%', what)"></p>
 </div>
