--- a/src/libraries/components/auth/auth.component.html
+++ b/src/libraries/components/auth/auth.component.html
@@ -1,13 +1,14 @@
 <div class="box nostyle">
-  <form>
+  <form class="container">
     <p [innerHtml]="local.data.auth.login.desc"></p>
-    <div class="form-group">
-      <div class="form-group">
+
+    <section class="form-group">
+      <section class="form-group">
         <button class="signin google" (click)="auth.signIn_google()">
           <img src="/assets/images/logos/google.svg" />
           <span [innerHtml]="local.data.auth.buttons.login.google"></span>
         </button>
-      </div>
-    </div>
+      </section>
+    </section>
   </form>
 </div>
