Fixed bugs and refined realtime sync

--- a/src/libraries/components/auth/auth-profile/auth-profile.component.html
+++ b/src/libraries/components/auth/auth-profile/auth-profile.component.html
@@ -28,7 +28,7 @@
       <img [src]="auth.userPublicData?.photoURL" alt="profile" />
       <h3>{{ auth.displayName_or_email }}</h3>
       <p
-        *ngIf="auth.userPublicData.displayName"
+        *ngIf="auth.userPublicData?.displayName"
         [innerHtml]="
           auth.userPublicData.email
             .replace('.', '&shy;.')
