--- a/src/libraries/scss/libraries.scss
+++ b/src/libraries/scss/libraries.scss
@@ -2,5 +2,6 @@
 @import "./mixings.scss";
 @import "./popover.scss";
 @import "./flexbox.scss";
+@import "./auth.scss";
 @import "./box.scss";
 @import "./utility.scss";
