--- a/src/libraries/components/auth/auth-profile/auth-profile.component.html
+++ b/src/libraries/components/auth/auth-profile/auth-profile.component.html
@@ -12,7 +12,7 @@
         />
 
         <ng-template #noProfileImg>
-          <i class="fas" aria-hidden="true">&#xf2bd;</i>
+          <i class="fas clickable" aria-hidden="true">&#xf2bd;</i>
         </ng-template>
       </div>
       <ng-template #notLoggedIn>
@@ -25,8 +25,21 @@
     </div>
 
     <div class="pop_cnt">
-      <img [src]="auth.userPublicData?.photoURL" alt="profile" />
-      <h3>{{ auth.displayName_or_email }}</h3>
+      <img
+        [src]="auth.userPublicData?.photoURL"
+        alt="profile"
+        *ngIf="auth.userPublicData?.photoURL; else noProfileImg"
+      />
+      <ng-template #noProfileImg>
+        <i class="fas" aria-hidden="true">&#xf2bd;</i>
+      </ng-template>
+      <h3
+        [innerHtml]="
+          auth.displayName_or_email
+            .replace('.', '&shy;.')
+            .replace('@', '&shy;@')
+        "
+      ></h3>
       <p
         *ngIf="auth.userPublicData?.displayName"
         [innerHtml]="
@@ -36,7 +49,7 @@
         "
       ></p>
 
-      <div class="flexbox small rezize">
+      <div class="flexbox small resize">
         <button
           (click)="router.nav('settings'); pop_profile.set(false)"
           [innerHtml]="local.data.settings.buttons.settings"
