--- a/src/libraries/components/settings/settings.component.html
+++ b/src/libraries/components/settings/settings.component.html
@@ -5,22 +5,6 @@
   </section>
 
   <section>
-    <h2 [innerHtml]="local.data.settings.sections.themes.title"></h2>
-    <p [innerHtml]="local.data.settings.sections.themes.desc"></p>
-
-    <div class="flexbox rezize equal themes">
-      <div
-        class="theme flexbox column nospace clickable"
-        *ngFor="let theme of ts.themes"
-        (click)="ts.switch_theme(theme)"
-      >
-        <div class="box" [style.background-color]="theme.color"></div>
-        <p [innerHtml]="theme.name"></p>
-      </div>
-    </div>
-  </section>
-
-  <section>
     <h2 [innerHtml]="local.data.settings.sections.lang.title"></h2>
     <p [innerHtml]="local.data.settings.sections.lang.desc"></p>
 
@@ -35,5 +19,21 @@
         </option>
       </select>
     </section>
+  </section>
+
+  <section>
+    <h2 [innerHtml]="local.data.settings.sections.themes.title"></h2>
+    <p [innerHtml]="local.data.settings.sections.themes.desc"></p>
+
+    <div class="flexbox resize equal themes">
+      <div
+        class="theme flexbox column nospace clickable"
+        *ngFor="let theme of ts.themes"
+        (click)="ts.switch_theme(theme)"
+      >
+        <div class="box" [style.background-color]="theme.color"></div>
+        <p [innerHtml]="theme.name"></p>
+      </div>
+    </div>
   </section>
 </div>
