--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,5 +4,5 @@
     <p [innerHtml]="local.data.home.recipe.desc"></p>
   </div>
 
-  <recipe-recipe-list [recipes]="recipes" [async]="true"></recipe-recipe-list>
+  <recipes-list [recipes]="recipes" [async]="true"></recipes-list>
 </div>
