--- a/src/app/components/recipe/recipe.component.html
+++ b/src/app/components/recipe/recipe.component.html
@@ -1,220 +1,1 @@
-<div class="box nostyle" *ngIf="recipe">
-  <!-- 
-      TITLES DESCRIPTIONS
-     -->
-  <section>
-    <h1
-      *ngIf="type == 'create'"
-      [innerHtml]="local.data.recipe.create.title"
-    ></h1>
-    <p *ngIf="type == 'create'" [innerHtml]="local.data.recipe.create.desc"></p>
-
-    <h1 *ngIf="type == 'edit'" [innerHtml]="local.data.recipe.edit.title"></h1>
-    <p *ngIf="type == 'edit'" [innerHtml]="local.data.recipe.edit.desc"></p>
-
-    <h1
-      *ngIf="type == 'delete'"
-      [innerHtml]="local.data.recipe.delete.title"
-    ></h1>
-    <p
-      *ngIf="type == 'delete'"
-      [innerHtml]="
-        local.data.recipe.delete.desc.replace(
-          '%recipe%',
-          recipe.langs[lang].name
-        )
-      "
-    ></p>
-  </section>
-
-  <!-- 
-    FORM
-   -->
-  <section>
-    <form #form="ngForm">
-      <!-- 
-        LANGUAGE SELECTOR
-       -->
-      <section class="form-group" *ngIf="type != 'delete'">
-        <label
-          for="lang_picker"
-          class="required"
-          [innerHtml]="local.data.recipe.fields.language.label"
-        ></label>
-        <select (change)="change_lang()" [(ngModel)]="lang" name="lang_picker">
-          <option *ngFor="let l of local.lang_list" [value]="l">
-            {{ local.data.general.lang[l] }}
-          </option>
-        </select>
-      </section>
-
-      <!-- 
-        REQUIRED FIELDS
-       -->
-      <section class="form-group" *ngIf="type != 'delete'">
-        <!-- 
-          NAME FIELD 
-         -->
-        <section class="form-group">
-          <label
-            for="name"
-            class="required"
-            [innerHtml]="local.data.recipe.fields.name.label"
-          ></label>
-          <label
-            [hidden]="name.valid || name.untouched"
-            class="alert alert-danger"
-            for="name"
-            [innerHtml]="local.data.recipe.fields.name.error"
-          >
-          </label>
-
-          <input
-            type="text"
-            class="form-control"
-            id="name"
-            [placeholder]="local.data.recipe.fields.name.placeholder"
-            required
-            [(ngModel)]="recipe.langs[lang].name"
-            name="name"
-            #name="ngModel"
-          />
-        </section>
-
-        <!-- 
-          DESCRIPTION FIELD 
-         -->
-        <section class="form-group">
-          <label
-            for="desciption"
-            class="required"
-            [innerHtml]="local.data.recipe.fields.description.label"
-          ></label>
-          <label
-            [hidden]="desciption.valid || desciption.untouched"
-            class="alert alert-danger"
-            for="desciption"
-            [innerHtml]="local.data.recipe.fields.description.error"
-          >
-          </label>
-
-          <textarea
-            class="vertical"
-            id="desciption"
-            [placeholder]="local.data.recipe.fields.description.placeholder"
-            required
-            [(ngModel)]="recipe.langs[lang].description"
-            name="desciption"
-            #desciption="ngModel"
-          ></textarea>
-        </section>
-
-        <!-- 
-          INGREDIENTS FIELD 
-         -->
-        <section class="form-group">
-          <label
-            for="ingredients"
-            class="required"
-            [innerHtml]="local.data.recipe.fields.ingredients.label"
-          ></label>
-
-          <recipe-ingredients-list
-            [(ingredients)]="recipe.langs[lang].ingredients"
-            type="write"
-          ></recipe-ingredients-list>
-        </section>
-
-        <!-- 
-          METHOD FIELD 
-         -->
-        <section class="form-group">
-          <label
-            for="method"
-            class="required"
-            [innerHtml]="local.data.recipe.fields.method.label"
-          ></label>
-          <label
-            [hidden]="method.valid || method.untouched"
-            class="alert alert-danger"
-            for="method"
-            [innerHtml]="local.data.recipe.fields.method.error"
-          >
-          </label>
-
-          <textarea
-            class="vertical large"
-            id="method"
-            [placeholder]="local.data.recipe.fields.method.placeholder"
-            required
-            [(ngModel)]="recipe.langs[lang].method"
-            name="method"
-            #method="ngModel"
-          ></textarea>
-        </section>
-
-        <!-- 
-          NOTES FIELD 
-         -->
-        <section class="form-group">
-          <label
-            for="notes"
-            [innerHtml]="local.data.recipe.fields.notes.label"
-          ></label>
-
-          <textarea
-            class="vertical large"
-            id="notes"
-            [placeholder]="local.data.recipe.fields.notes.placeholder"
-            [(ngModel)]="recipe.langs[lang].notes"
-            name="notes"
-            #notes="ngModel"
-          ></textarea>
-        </section>
-      </section>
-
-      <!-- 
-        SUBMIT BUTTON
-       -->
-      <section class="form-group">
-        <!-- 
-          SUBMIT BUTTON
-         -->
-        <section class="form-group">
-          <button
-            type="button"
-            class="no-stretch"
-            (click)="cancel()"
-            [innerHtml]="local.data.general.buttons.cancel"
-          ></button>
-
-          &nbsp;&nbsp;&nbsp;&nbsp;
-
-          <button
-            type="button"
-            *ngIf="type == 'create'"
-            class="no-stretch"
-            (click)="onSubmit(form)"
-            [innerHtml]="local.data.recipe.buttons.add"
-          ></button>
-
-          <button
-            type="button"
-            *ngIf="type == 'edit'"
-            class="no-stretch"
-            (click)="onSubmit(form)"
-            [innerHtml]="local.data.recipe.buttons.save"
-          ></button>
-
-          <button
-            type="button"
-            *ngIf="type == 'delete'"
-            class="no-stretch"
-            (click)="onSubmit(form)"
-            [innerHtml]="local.data.recipe.buttons.delete"
-          ></button>
-        </section>
-      </section>
-    </form>
-  </section>
-</div>
+<router-outlet></router-outlet>
