--- a/src/app/components/profile/profile-bookmarks/profile-bookmarks.component.html
+++ b/src/app/components/profile/profile-bookmarks/profile-bookmarks.component.html
@@ -4,5 +4,5 @@
     <p [innerHtml]="local.data.bookmarks.desc"></p>
   </div>
 
-  <recipe-recipe-list [recipes]="recipes" [async]="false"></recipe-recipe-list>
+  <recipes-list [recipes]="recipes" [async]="false"></recipes-list>
 </div>
